<resources>
    <string name="app_name">Bonne Bouffe</string>
    <string name="title1">Bienvenue chez</string>
    <string name="title2">Bonne Bouffe</string>

    <string name="basket">Votre panier</string>

    <string name="aperetif">Apérétifs</string>
    <string name="entrance">Entrées</string>
    <string name="dishes">Plats</string>
    <string name="deserts">Desserts</string>

    <string name="descriptionDish">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</string>
    <string name="titleDish">Titre du plat</string>

    <string name="ingredient">INGREDIENTS</string>

    <string name="stringButtonOrder">AJOUTER au panier : </string>

    <!-- BDD ecrite en dure tableau -->
    <string-array name="bdd">
        <item>Salade composée</item>
        <item>pomme</item>
        <item>frites</item>
        <item>burger king</item>
        <item>manger gras pas bien</item>
    </string-array>

    <!-- CONNECTION compte -->
    <string name="firstName">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="address">Adresse de livraison</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="logIn">Se connecter</string>
    <string name="logOut">Se déconnecter</string>
    <string name="signUp">Créer un compte</string>
    <string name="alreadyAccount">Déjà un compte ?</string>
    <string name="forgotPassword">Mot de passe oublié ?</string>

    <string name="imageDescription">content description</string>

</resources>